@@ -1722,6 +1722,23 @@ implementing a checker. These are provided via the standard \code{javac} ``\code
 switch, which is used to pass options to an annotation processor.
 
 
+\subsectionAndLabel{Format of output}{creating-debugging-options-format}
+
+\begin{itemize}
+
+\item \code{-AjsonOutput}: Output error/warning messages in a JSON file,
+  for easy parsing by tools.
+  Example usage: \code{-AjsonOutput=\$HOME/typechecking.json}
+
+\item \code{-Adetailedmsgtext}: Output error/warning messages in a
+  stylized format that is easy for tools to parse.  This is useful for
+  tools that run the Checker Framework and parse its output, such as IDE
+  plugins.  See the source code of \<SourceChecker.java> for details about
+  the format.  This is now deprecated, given the existence of JSON output.
+
+\end{itemize}
+
+
 \subsectionAndLabel{Amount of detail in messages}{creating-debugging-options-detail}
 
 \begin{itemize}
@@ -1732,12 +1749,6 @@ usually not shown.
 \item \code{-AprintVerboseGenerics}: print more information about type
   parameters and wildcards when they appear in warning messages.  Supplying
   this also implies \code{-AprintAllQualifiers}.
-
-\item \code{-Adetailedmsgtext}: Output error/warning messages in a
-  stylized format that is easy for tools to parse.  This is useful for
-  tools that run the Checker Framework and parse its output, such as IDE
-  plugins.  See the source code of \<SourceChecker.java> for details about
-  the format.
 
 \item \code{-Anomsgtext}: use message keys (such as ``\code{type.invalid}'')
 rather than full message text when reporting errors or warnings.  This is
@@ -1796,7 +1807,6 @@ about intermediate steps in method type argument inference
   if it includes a \code{.bat} extension on Windows) to re-execute the same compilation command.
   Note that this argument cannot be included in a file containing command-line arguments
   passed to the compiler using the @argfile syntax.
-
   Example usage: \code{-AoutputArgsToFile=\$HOME/scriptfile}
 
 \end{itemize}
