@@ -766,9 +766,13 @@ Partially-annotated libraries
 Debugging
 \begin{itemize}
 \item
+ \<-AjsonOutput>,
+ \<-Adetailedmsgtext>
+Format of diagnostic messages; see Section~\ref{creating-debugging-options-format}.
+
+\item
  \<-AprintAllQualifiers>,
  \<-AprintVerboseGenerics>,
- \<-Adetailedmsgtext>,
  \<-Anomsgtext>
 Amount of detail in messages; see Section~\ref{creating-debugging-options-detail}.
 
