@@ -1,0 +1,19 @@
+package org.checkerframework.framework.source.json;
+
+public class Range {
+    public Position start, end;
+
+    public Range() {}
+
+    public Range(Position start, Position end) {
+        this.start = start;
+        this.end = end;
+    }
+
+    @Override
+    public String toString() {
+        return start + "-" + end;
+    }
+
+    public static final Range NONE = new Range(Position.NONE, Position.NONE);
+}
